Extracted DTO to dedicated lib